--- a/ui/package.json
+++ b/ui/package.json
@@ -15,7 +15,8 @@
     "dev:electron": "cd dev && yarn 'dev:electron' && cd ..",
     "build": "node build/index.js",
     "build:js": "node build/script.javascript.js",
-    "build:css": "node build/script.css.js"
+    "build:css": "node build/script.css.js",
+    "postinstall": "yarn build"
   },
   "repository": {
     "type": "git",
